chore(gateway): first action

--- a/apps/gateway/app/config/services.yaml
+++ b/apps/gateway/app/config/services.yaml
@@ -16,10 +16,14 @@ services:
     App\:
         resource: '../src/'
         exclude:
-            - '../src/DependencyInjection/'
-            - '../src/Entity/'
             - '../src/Kernel.php'
-            - '../src/Tests/'
+            - '../src/Entity/'
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+    # controllers are imported separately to make sure services can be injected
+    # as action arguments even if you don't extend any base controller class
+    App\Frontoffice\Presentation\Action\:
+        resource: '../src/Frontoffice/Presentation/Action'
+        tags: ['controller.service_arguments']
