chore(gateway): flexible responder system

--- a/apps/gateway/app/config/services.yaml
+++ b/apps/gateway/app/config/services.yaml
@@ -21,6 +21,17 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+    App\Common\Infrastructure\Response\JsonResponder:
+        tags:
+            - {name: 'app.responder', priority: 2}
+
+    App\Common\Infrastructure\Response\HtmlResponder:
+        tags:
+            - {name: 'app.responder', priority: 1}
+
+    App\Common\Infrastructure\Response\ResponderManager:
+        arguments:
+            - !tagged_iterator app.responder
 
     # controllers are imported separately to make sure services can be injected
     # as action arguments even if you don't extend any base controller class
