--- a/apps/gateway/app/config/services.yaml
+++ b/apps/gateway/app/config/services.yaml
@@ -42,6 +42,6 @@ services:
         tags:
             - {name: 'app.responder', priority: 10}
 
-    App\Common\Infrastructure\Response\ResponderManager:
+    App\Common\Infrastructure\Response\Responder:
         arguments:
             - !tagged_iterator app.responder
