--- a/apps/gateway/app/composer.json
+++ b/apps/gateway/app/composer.json
@@ -41,7 +41,8 @@
         "symfony/web-link": "5.3.*",
         "symfony/yaml": "5.3.*",
         "twig/extra-bundle": "^2.12|^3.0",
-        "twig/twig": "^2.12|^3.0"
+        "twig/twig": "^2.12|^3.0",
+        "webmunkeez/adr-bundle": "^1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
