--- a/docker/gateway/php/conf.d/xdebug.ini
+++ b/docker/gateway/php/conf.d/xdebug.ini
@@ -1,4 +1,6 @@
 xdebug.mode=debug
+xdebug.start_with_request=yes
+xdebug.log_level=0
 xdebug.discover_client_host=true
 xdebug.client_host=host.docker.internal
 xdebug.client_port=9003
