--- a/docker/gateway/Dockerfile
+++ b/docker/gateway/Dockerfile
@@ -1,8 +1,8 @@
 FROM php:8.0-fpm
 
 # install general dependencies
-RUN apt-get update && apt-get install -y --no-install-recommends git libicu-dev libpq-dev \
-    && docker-php-ext-install opcache intl pdo pdo_pgsql
+RUN apt-get update && apt-get install -y --no-install-recommends git libzip-dev unzip libicu-dev libpq-dev \
+    && docker-php-ext-install opcache zip intl pdo pdo_pgsql
 
 # copy php ini configuration
 COPY ./php/conf.d/php.ini /usr/local/etc/php/conf.d/docker-php.ini
