--- a/config/packages/doctrine_migrations.yaml
+++ b/config/packages/doctrine_migrations.yaml
@@ -1,6 +1,8 @@
 doctrine_migrations:
     migrations_paths:
-        # namespace is arbitrary but should be different from App\Migrations
-        # as migrations classes should NOT be autoloaded
-        'DoctrineMigrations': '%kernel.project_dir%/migrations'
+        # migrations classes should NOT be autoloaded
+        'App\Migration': '%kernel.project_dir%/migrations'
+    storage:
+        table_storage:
+            table_name: migr_migration
     enable_profiler: '%kernel.debug%'
