--- a/.env
+++ b/.env
@@ -34,3 +34,11 @@ APP_SECRET=b2bc45ee7714a60314011676db5ae591
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
 DATABASE_URL=postgres://user:password@database:5432/db?serverVersion=14&charset=utf8
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/messenger ###
+# Choose one of the transports below
+MESSENGER_TRANSPORT_ASYNC_DSN=doctrine://default?table_name=msgr_message&queue_name=async&auto_setup=false
+MESSENGER_TRANSPORT_FAILED_DSN=doctrine://default?table_name=msgr_message&queue_name=failed&auto_setup=false
+# MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
+# MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
+###< symfony/messenger ###
