--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "sensio/framework-extra-bundle": "^6.1",
         "symfony/asset": "5.3.*",
         "symfony/console": "5.3.*",
+        "symfony/doctrine-messenger": "5.3.*",
         "symfony/dotenv": "5.3.*",
         "symfony/expression-language": "5.3.*",
         "symfony/flex": "^1.3.1",
@@ -42,7 +43,8 @@
         "symfony/yaml": "5.3.*",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/twig": "^2.12|^3.0",
-        "webmunkeez/adr-bundle": "^1.0"
+        "webmunkeez/adr-bundle": "^1.0",
+        "webmunkeez/cqrs-bundle": "^1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
