--- a/composer.json
+++ b/composer.json
@@ -66,7 +66,8 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "src/"
+            "App\\": "src/",
+            "App\\Migration\\": "migrations/"
         }
     },
     "autoload-dev": {
