--- a/composer.json
+++ b/composer.json
@@ -48,6 +48,7 @@
         "webmunkeez/cqrs-bundle": "^1.0"
     },
     "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^3.4",
         "phpunit/phpunit": "^9.5",
         "symfony/browser-kit": "5.3.*",
         "symfony/css-selector": "5.3.*",
@@ -72,7 +73,8 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "App\\Tests\\": "tests/"
+            "App\\Fixture\\": "fixtures/",
+            "App\\Test\\": "tests/"
         }
     },
     "replace": {
