--- a/config/services.yaml
+++ b/config/services.yaml
@@ -21,4 +21,7 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
-    
+    _instanceof:
+        App\Common\Infrastructure\Doctrine\Repository\EntityManagerAwareInterface:
+            calls:
+                - setEntityManager: ['@doctrine.orm.entity_manager']
