feat: add webpack encore

--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,9 @@
 /public/dist
 ###< private ###
 
-###> node ###
-/node_modules
-###< node ###
+###> symfony/webpack-encore-bundle ###
+/node_modules/
+/public/build/
+npm-debug.log
+yarn-error.log
+###< symfony/webpack-encore-bundle ###
