--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
         "@symfony/webpack-encore": "^1.0.0",
         "autoprefixer": "^10.4.0",
         "core-js": "^3.0.0",
+        "postcss": "^8.3.11",
         "postcss-loader": "^6.2.0",
         "regenerator-runtime": "^0.13.2",
         "tailwindcss": "^2.2.19",
+        "webpack": "^5.64.1",
         "webpack-notifier": "^1.6.0"
     },
     "license": "UNLICENSED",
