--- a/package.json
+++ b/package.json
@@ -1,4 +1,13 @@
 {
+    "name": "yannissgarra",
+    "license": "proprietary",
+    "private": true,
+    "scripts": {
+        "dev-server": "encore dev-server",
+        "dev": "encore dev",
+        "watch": "encore dev --watch",
+        "build": "encore production --progress"
+    },
     "devDependencies": {
         "@symfony/webpack-encore": "^1.0.0",
         "autoprefixer": "^10.4.0",
@@ -8,13 +17,5 @@
         "regenerator-runtime": "^0.13.2",
         "tailwindcss": "^2.2.19",
         "webpack-notifier": "^1.6.0"
-    },
-    "license": "UNLICENSED",
-    "private": true,
-    "scripts": {
-        "dev-server": "encore dev-server",
-        "dev": "encore dev",
-        "watch": "encore dev --watch",
-        "build": "encore production --progress"
     }
 }
