--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -14,6 +14,7 @@
     "felixfbecker.php-debug",
     "mblode.twig-language-2",
     "rangav.vscode-thunder-client",
+    "dbaeumer.vscode-eslint",
     "bradlc.vscode-tailwindcss"
   ]
 }
