--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
         "@symfony/webpack-encore": "^1.0.0",
         "autoprefixer": "^10.4.0",
         "core-js": "^3.0.0",
+        "eslint": "^8.3.0",
+        "eslint-config-airbnb-base": "^15.0.0",
+        "eslint-plugin-import": "^2.25.3",
         "postcss": "^8.3.11",
         "postcss-loader": "^6.2.0",
         "regenerator-runtime": "^0.13.2",
