--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "build": "encore production --progress"
     },
     "devDependencies": {
+        "@babel/eslint-parser": "^7.16.3",
         "@symfony/webpack-encore": "^1.0.0",
         "autoprefixer": "^10.4.0",
         "core-js": "^3.0.0",
