--- a/composer.json
+++ b/composer.json
@@ -42,6 +42,7 @@
         "symfony/webpack-encore-bundle": "^1.12",
         "symfony/yaml": "5.3.*",
         "twig/extra-bundle": "^2.12|^3.0",
+        "twig/intl-extra": "^3.3",
         "twig/twig": "^2.12|^3.0",
         "webmunkeez/adr-bundle": "^1.0",
         "webmunkeez/cqrs-bundle": "^1.0",
