--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     },
     "devDependencies": {
         "@babel/eslint-parser": "^7.16.3",
+        "@fortawesome/fontawesome-free": "^5.15.4",
         "@symfony/webpack-encore": "^1.0.0",
         "autoprefixer": "^10.4.0",
         "core-js": "^3.0.0",
