feat: download resume

--- a/.env
+++ b/.env
@@ -17,6 +17,10 @@
 COMPOSE_PROJECT_NAME=yannissgarra-projects-yannissgarra
 ###< docker ###
 
+###> project/informations ###
+UPLOAD_PATH=/www/public/uploads
+###< project/informations ###
+
 ###> symfony/framework-bundle ###
 APP_ENV=dev
 APP_SECRET=b2bc45ee7714a60314011676db5ae591
