--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
         "eslint": "^8.3.0",
         "eslint-config-airbnb-base": "^15.0.0",
         "eslint-plugin-import": "^2.25.3",
+        "eslint-plugin-vue": "^8.1.1",
         "postcss": "^8.3.11",
         "postcss-loader": "^6.2.0",
         "regenerator-runtime": "^0.13.2",
         "tailwindcss": "^2.2.19",
+        "vue": "^3.2.23",
+        "vue-loader": "^16.1.0",
         "webpack-notifier": "^1.6.0"
     }
 }
