--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "core-js": "^3.0.0",
         "eslint": "^8.3.0",
         "eslint-config-airbnb-base": "^15.0.0",
+        "eslint-import-resolver-alias": "^1.1.2",
         "eslint-plugin-import": "^2.25.3",
         "eslint-plugin-vue": "^8.1.1",
         "js-cookie": "^3.0.1",
