--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
   gateway:
     build:
       context: ./docker/gateway
+      target: dev
     depends_on:
       - database
     volumes:
