chore: some vscode config

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,6 +17,14 @@
         "editor.defaultFormatter": "junstyle.php-cs-fixer"
     },
     "[json]": {
+        "editor.insertSpaces": true,
+		"editor.tabSize": 4,
+        "editor.formatOnSave": true,
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
+    "[yaml]": {
+        "editor.insertSpaces": true,
+		"editor.tabSize": 4,
         "editor.formatOnSave": true,
         "editor.defaultFormatter": "esbenp.prettier-vscode"
     },
