--- a/config/services.yaml
+++ b/config/services.yaml
@@ -5,12 +5,12 @@
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
     container.dumper.inline_factories: true
-    upload_path: '%env(resolve:UPLOAD_PATH)%'
+    upload_path: '%env(UPLOAD_PATH)%'
 
 services:
     # default configuration for services in *this* file
     _defaults:
-        autowire: true      # Automatically injects dependencies in your services.
+        autowire: true # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
 
     # makes classes in src/ available to be used as services
