fix: better upload path/url

--- a/.env
+++ b/.env
@@ -18,6 +18,7 @@ COMPOSE_PROJECT_NAME=yannissgarra-projects-yannissgarra
 ###< docker ###
 
 ###> project/informations ###
+UPLOAD_DSN=https://u.yannissgarra.com
 UPLOAD_PATH=/www/public/uploads
 ###< project/informations ###
 
