chore: better docker/gitlab-ci organization

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   gateway:
     build:
       context: ./docker/gateway
-      target: dev
+      dockerfile: dev.Dockerfile
     depends_on:
       - database
     volumes:
