--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,10 +1,11 @@
 stages:
     - build-images
     - test
+    - build
     - deploy
 
 variables:
-    GATEWAY_REGISTRY_IMAGE: ${CI_REGISTRY_IMAGE}/gateway
+    GATEWAY_REGISTRY_BASE_IMAGE: ${CI_REGISTRY_IMAGE}/gateway
 
 build-gateway-images:
     stage: build-images
@@ -18,20 +19,28 @@ build-gateway-images:
         - docker:dind
     variables:
         DOCKER_CONTEXT: ./docker/gateway
-    script:
+    before_script:
         - docker info
         - docker login ${CI_REGISTRY} --username ${CI_REGISTRY_USER} --password ${CI_REGISTRY_PASSWORD}
-        - docker build --target test --tag ${GATEWAY_REGISTRY_IMAGE}/test:latest ${DOCKER_CONTEXT}
-        - docker push ${GATEWAY_REGISTRY_IMAGE}/test:latest
-        - docker build --target deploy --tag ${GATEWAY_REGISTRY_IMAGE}/deploy:latest ${DOCKER_CONTEXT}
-        - docker push ${GATEWAY_REGISTRY_IMAGE}/deploy:latest
+    after_script:
         - docker logout ${CI_REGISTRY}
+    script:
+        - docker build -t ${GATEWAY_REGISTRY_BASE_IMAGE}:latest -f ${DOCKER_CONTEXT}/Dockerfile ${DOCKER_CONTEXT}
+        - docker push ${GATEWAY_REGISTRY_BASE_IMAGE}:latest
+        - docker build -t ${GATEWAY_REGISTRY_BASE_IMAGE}/build:latest -f ${DOCKER_CONTEXT}/build.Dockerfile ${DOCKER_CONTEXT}
+        - docker push ${GATEWAY_REGISTRY_BASE_IMAGE}/build:latest
+        - docker build -t ${GATEWAY_REGISTRY_BASE_IMAGE}/dev:latest -f ${DOCKER_CONTEXT}/dev.Dockerfile ${DOCKER_CONTEXT}
+        - docker push ${GATEWAY_REGISTRY_BASE_IMAGE}/dev:latest
+        - docker build -t ${GATEWAY_REGISTRY_BASE_IMAGE}/test:latest -f ${DOCKER_CONTEXT}/test.Dockerfile ${DOCKER_CONTEXT}
+        - docker push ${GATEWAY_REGISTRY_BASE_IMAGE}/test:latest
+        - docker build -t ${GATEWAY_REGISTRY_BASE_IMAGE}/deploy:latest -f ${DOCKER_CONTEXT}/deploy.Dockerfile ${DOCKER_CONTEXT}
+        - docker push ${GATEWAY_REGISTRY_BASE_IMAGE}/deploy:latest
 
 test-gateway:
     stage: test
     only:
         - tags
-    image: ${GATEWAY_REGISTRY_IMAGE}/test:latest
+    image: ${GATEWAY_REGISTRY_BASE_IMAGE}/test:latest
     script:
         - APP_ENV=test composer install --no-interaction
         - yarn install
@@ -39,21 +48,32 @@ test-gateway:
         - php-cs-fixer fix ./src --dry-run --diff
         - ./vendor/bin/phpunit
 
-deploy-gateway:
-    stage: deploy
+build-gateway:
+    stage: build
     only:
         - tags
-    image: ${GATEWAY_REGISTRY_IMAGE}/deploy:latest
-    before_script:
-        - mkdir -p ~/.ssh
-        - eval $(ssh-agent -s)
-        - echo "${SSH_PRIVATE_KEY}" | tr -d '\r' | ssh-add - > /dev/null
-        - '[[ -f /.dockerenv ]] && echo -e "Host *\n\tStrictHostKeyChecking no\n\n" > ~/.ssh/config'
+    image: ${GATEWAY_REGISTRY_BASE_IMAGE}/build:latest
     script:
         - APP_ENV=prod APP_DEBUG=0 composer install --no-dev --no-interaction --optimize-autoloader
         - APP_ENV=prod APP_DEBUG=0 php bin/console cache:clear
         - yarn install
         - yarn build
         - tar -zcvf ${CI_COMMIT_SHA}.tar.gz ./bin/console ./config ./migrations ./public ./src ./templates ./translations ./vendor ./.env
+    artifacts:
+        paths:
+            - ${CI_COMMIT_SHA}.tar.gz
+        expire_in: 1 day
+
+deploy-gateway:
+    stage: deploy
+    only:
+        - tags
+    image: ${GATEWAY_REGISTRY_BASE_IMAGE}/deploy:latest
+    before_script:
+        - mkdir -p ~/.ssh
+        - eval $(ssh-agent -s)
+        - echo "${SSH_PRIVATE_KEY}" | tr -d '\r' | ssh-add - > /dev/null
+        - '[[ -f /.dockerenv ]] && echo -e "Host *\n\tStrictHostKeyChecking no\n\n" > ~/.ssh/config'
+    script:
         - scp -p ${CI_COMMIT_SHA}.tar.gz ${SSH_USER}@${SSH_HOST}:${SSH_PATH}/releases
         - ssh ${SSH_USER}@${SSH_HOST} "cd ${SSH_PATH}/releases && mkdir ${CI_COMMIT_TAG} && mv ${CI_COMMIT_SHA}.tar.gz ${CI_COMMIT_TAG} && cd ${CI_COMMIT_TAG} && tar -xf ${CI_COMMIT_SHA}.tar.gz && rm ${CI_COMMIT_SHA}.tar.gz && cd ${SSH_PATH} && rm current && ln -s releases/${CI_COMMIT_TAG} current && cp shared/.env.local.php releases/${CI_COMMIT_TAG}/.env.local.php"
