--- a/docker/gateway/Dockerfile
+++ b/docker/gateway/Dockerfile
@@ -1,4 +1,4 @@
-FROM php:8.0-fpm AS base
+FROM php:8.0-fpm
 
 # install php missing dependencies
 RUN apt-get update && apt-get install -y --no-install-recommends \
@@ -21,42 +21,3 @@ COPY ./php/conf.d/php.ini /usr/local/etc/php/conf.d/docker-php.ini
 RUN mkdir -p /www
 COPY . /www
 WORKDIR /www
-
-FROM base AS builder
-
-# install composer
-RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer \
-    && chmod a+x /usr/local/bin/composer
-
-# install symfony binary
-RUN curl -sS https://get.symfony.com/cli/installer | bash \
-    && mv $HOME/.symfony/bin/symfony /usr/local/bin/symfony \
-    && chmod a+x /usr/local/bin/symfony
-
-# install php cs fixer
-RUN curl -L https://cs.symfony.com/download/php-cs-fixer-v3.phar -o php-cs-fixer \
-    && mv php-cs-fixer /usr/local/bin/php-cs-fixer \
-    && chmod a+x /usr/local/bin/php-cs-fixer
-
-# install node 16
-RUN curl -sL https://deb.nodesource.com/setup_16.x | bash - \
-    && apt-get update && apt-get install -y --no-install-recommends nodejs && apt-get clean \
-    && npm install -g yarn
-
-FROM builder AS test
-
-FROM builder AS dev
-
-# install xdebug
-RUN pecl install xdebug \
-    && docker-php-ext-enable xdebug
-
-# copy xdebug ini configuration
-COPY ./php/conf.d/xdebug.ini /usr/local/etc/php/conf.d/docker-xdebug.ini
-
-FROM builder AS deploy
-
-# install ssh
-RUN apt-get update && apt-get install -y --no-install-recommends openssh-client && apt-get clean
-
-FROM base AS prod
