--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,7 @@ version: '3.9'
 
 services:
   gateway:
-    build:
-      context: ./docker/gateway
-      dockerfile: dev.Dockerfile
+    image: registry.gitlab.com/yannissgarra/yannissgarra/gateway/dev:latest
     depends_on:
       - database
     volumes:
