--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,8 @@ version: '3.9'
 
 services:
   gateway:
-    image: registry.gitlab.com/yannissgarra/yannissgarra/gateway/dev:latest
+    build:
+      context: ./docker/gateway
     depends_on:
       - database
     volumes:
